(ECommerce) Fixed: Order page custom scrollbar is not working

--- a/src/app/main/apps/e-commerce/order/order.component.scss
+++ b/src/app/main/apps/e-commerce/order/order.component.scss
@@ -19,7 +19,6 @@
         }
 
         .tab-content {
-            flex: 1 1 auto;
 
             &.products {
 
